--- a/causal-survival.html
+++ b/causal-survival.html
@@ -132,7 +132,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 
 <section id="introduction" class="level1">
 <h1>Introduction</h1>
-<p>In this notebook, we demonstrate in various ways of running non-, semi- and parametric survival analysis from a causal, potential outcomes approach in <code>R</code>. We mostly follow Hernan &amp; Robins (2020).</p>
+<p>In this notebook, we demonstrate various flavors of non-, semi- and parametric survival analysis from a causal, potential outcomes approach in <code>R</code>. We mostly follow Hernan &amp; Robins (2020).</p>
 <p>Specifically, we’ll cover:</p>
 <ul>
 <li>G-computation with logistic polynomial regression [DONE]</li>
