fix list of content

--- a/causal-survival.html
+++ b/causal-survival.html
@@ -170,13 +170,13 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <p>In this notebook, we demonstrate various flavors of non-, semi- and parametric survival analysis from a causal, potential outcomes approach in <code>R</code>. We mostly follow Hernan &amp; Robins (2020).</p>
 <p>Specifically, we’ll cover:</p>
 <ul>
-<li>G-computation with logistic polynomial regression <strong>[DONE]</strong></li>
-<li>G-computation with Cox proportional hazards model <strong>[DONE - needs bootstrapping]</strong></li>
-<li>Inverse probability of treatment weighting in logistic regression <strong>[DONE]</strong></li>
-<li>Inverse probability of treatment weighting in Cox proportional hazards model <strong>[DONE - needs bootstrapping]</strong></li>
-<li>Inverse probability of treatment weighting in Kaplan-Meier <strong>[DONE]</strong></li>
-<li>Sub-group analysis with g-computation and logistic polynomial regression <strong>[DONE - needs bootstrapping]</strong></li>
-<li>Sub-group analysis with IP weighted Kaplan-Meier <strong>[DONE]</strong></li>
+<li>G-computation with logistic polynomial regression</li>
+<li>G-computation with Cox proportional hazards model [NB: needs bootstrapping]</li>
+<li>Inverse probability of treatment weighting in logistic regression</li>
+<li>Inverse probability of treatment weighting in Cox proportional hazards model [NB: needs bootstrapping]</li>
+<li>Inverse probability of treatment weighting in Kaplan-Meier</li>
+<li>Sub-group analysis with g-computation and logistic polynomial regression [NB: needs bootstrapping]</li>
+<li>Sub-group analysis with IP weighted Kaplan-Meier</li>
 </ul>
 <p>The dataset is <code>nhefs</code> containing data from the National Health and Nutrition Examination Survey Data I Epidemiologic Follow-up Study.</p>
 </section>
