--- a/causal-survival.html
+++ b/causal-survival.html
@@ -737,7 +737,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </section>
 <section id="kaplan-meier-1" class="level2" data-number="7.2">
 <h2 data-number="7.2" class="anchored" data-anchor-id="kaplan-meier-1"><span class="header-section-number">7.2</span> Kaplan-Meier</h2>
-<p>Let’s compare our g-computation results with IP weighted Kaplan-Meier. Now, for subgroup analysis with IPTW, there are a few subtleties. Hernan and Robins (2020:165-166) writes:</p>
+<p>Let’s compare our g-computation results with IP weighted Kaplan-Meier. Now, for subgroup analysis with IPTW, there are a few subtleties. Hernan and Robins (2020:165-166) write:</p>
 <blockquote class="blockquote">
 <p>Marginal structural models do not include covariates when the target parameter is the average causal effect in the population. However, one may include covariates — which may be non-confounders — in a marginal structural model to assess effect modification. the effect estimates. In most settings, the vector of covariates <span class="math inline">\(L\)</span> should include <span class="math inline">\(V\)</span>. Even when <span class="math inline">\(V\)</span> and <span class="math inline">\(A\)</span> are independent given the other components of <span class="math inline">\(L\)</span> and <span class="math inline">\(V\)</span> is not needed to ensure exchangeability, including <span class="math inline">\(V\)</span> in <span class="math inline">\(L\)</span> will generally increase the efficiency with which the parameters of the marginal structural model are estimated.</p>
 </blockquote>
